ignore snipping tool

--- a/bug.n.ini
+++ b/bug.n.ini
@@ -1,4 +1,4 @@
-; bug.n - tiling window management
+﻿; bug.n - tiling window management
 ; @version 9.0.0
 
 ;; Status bar
@@ -93,6 +93,12 @@ Config_rule_#1=.*;.*;;1;0;0;0;1;0;
 Config_rule=CabinetWClass;File Explorer;;1;0;0;0;1;0;
 Config_rule=Notepad++;.*;;0;0;0;1;1;0;
 Config_rule=ConsoleWindowClass;C:\Python27\python.exe;;0;0;0;0;1;0;
+
+
+Config_rule=Microsoft-Windows-SnipperToolbar;Snipping Tool;;0;0;0;0;1;0;
+
+
+Config_rule=Microsoft-Windows-SnipperEditor;Snipping Tool;;0;0;0;0;1;0;
 ;; Configuration management
 Config_autoSaveSession=ask
 ;Config_maintenanceInterval=5000
@@ -209,7 +215,7 @@ Config_hotkey=#Space::
 ;Config_hotkey=!+y::View_traceAreas()
 
 ;; Administration
-Config_hotkey=#^e::Run, C:\Program Files (x86)\Notepad++\notepad++.exe "C:\Users\Shang Li\AppData\Roaming\bug.n\Config.ini"
+Config_hotkey=#^e::Run, edit "C:\Users\Shang Li\AppData\Roaming\bug.n\Config.ini"
 Config_hotkey=#^s::
 Config_hotkey=#^r::
 ;Config_hotkey=#^+r::
